[package]
name = "browsernaut"
version = "1.0.1"
description = "macOS Browser Picker"
authors = ["billyjacoby"]
license = ""
repository = "https://github.com/billyjacoby/browsernaut"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }
swift-rs = { version = "1.0.5", features = ["build"] }

[dependencies]
tauri = { version = "1.4", features = ["clipboard-all", "notification-all", "system-tray", "updater", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
tauri-plugin-deep-link = "0.1.1"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
enigo = "0.1.2"
swift-rs = "1.0.5"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
